--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
 </head>
 <body>
     <div class="container">
-        <h1>Nombre Completo</h1>
-        <p><strong>Profesión:</strong> Tu profesión</p>
-        
+        <h1>Kevin Santiago Aguirre Verano</h1>
+        <p><strong>Profesión:</strong> Tecnólogo En Gestión De Mercados</p>
+        <p>Soy un Tecnólogo en Gestión de Mercados con una sólida experiencia en el desarrollo e implementación de estrategias de ventas efectivas. Mi enfoque principal se centra en el análisis de mercado, la investigación de consumidores y la aplicación de técnicas de ventas para alcanzar y superar los objetivos comerciales. A lo largo de mi carrera, he perfeccionado mis habilidades en la gestión de relaciones con clientes, la negociación y el cierre de ventas. Me apasiona el proceso de ventas y estoy constantemente buscando nuevas formas de optimizar estrategias y mejorar los resultados. Mi formación académica me ha proporcionado una comprensión profunda de los principios del marketing y las ventas, y mi experiencia práctica me ha permitido aplicar estos conocimientos en diversos entornos, generando un impacto positivo en el crecimiento de las ventas.</p>
+
         <div class="section contacto">
             <h2>Contacto</h2>
-            <p><strong>Teléfono:</strong> +57 123 456 7890</p>
-            <p><strong>Email:</strong> correo@ejemplo.com</p>
-            <p><strong>LinkedIn:</strong> linkedin.com/in/tuusuario</p>
+            <p><strong>Email:</strong> <a href="mailto:santiverano16@gmail.com">santiverano16@gmail.com</a></p>
+            <p><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/kevin-santiago-aguirre-verano-3031a2211">www.linkedin.com/in/kevin-santiago-aguirre-verano-3031a2211</a></p>
         </div>
 
         <div class="section experiencia">
             <h2>Experiencia Laboral</h2>
-            <p><strong>Empresa XYZ</strong> (2020 - Actualidad)</p>
-            <p>Puesto ocupado y descripción breve.</p>
-            
-            <p><strong>Empresa ABC</strong> (2018 - 2020)</p>
-            <p>Puesto ocupado y descripción breve.</p>
+            <p><strong>Pentagrama</strong> (2025 - Actualidad)</p>
+            <p>Tecnólogo en gestión de mercados.</p>
+
+            <p><strong>Servicintegral S.A.S.</strong> (2022 - 2022)</p>
+            <p>Todero Mantenimiento en zonas verdes y residenciales de conjuntos.</p>
         </div>
 
         <div class="section educacion">
             <h2>Educación</h2>
-            <p><strong>Universidad Ejemplo</strong> (2014 - 2018)</p>
-            <p>Título obtenido.</p>
+            <p><strong>Servicio Nacional de Aprendizaje (SENA)</strong> (2023 - 2025)</p>
+            <p>Tecnólogo en Gestión de Mercados.</p>
         </div>
 
         <div class="section habilidades">
             <h2>Habilidades</h2>
             <ul>
-                <li>Habilidad 1</li>
-                <li>Habilidad 2</li>
-                <li>Habilidad 3</li>
+                <li>Adaptabilidad</li>
+                <li>Aprendizaje Rápido</li>
+                <li>Trabajo en equipo</li>
             </ul>
         </div>
     </div>
