--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Kevin Santiago Aguirre Verano</h1>
+        <h1>Kevin  Aguirre </h1>
         <p><strong>Profesión:</strong> Tecnólogo En Gestión De Mercados</p>
         <p>Soy un Tecnólogo en Gestión de Mercados con una sólida experiencia en el desarrollo e implementación de estrategias de ventas efectivas. Mi enfoque principal se centra en el análisis de mercado, la investigación de consumidores y la aplicación de técnicas de ventas para alcanzar y superar los objetivos comerciales. A lo largo de mi carrera, he perfeccionado mis habilidades en la gestión de relaciones con clientes, la negociación y el cierre de ventas. Me apasiona el proceso de ventas y estoy constantemente buscando nuevas formas de optimizar estrategias y mejorar los resultados. Mi formación académica me ha proporcionado una comprensión profunda de los principios del marketing y las ventas, y mi experiencia práctica me ha permitido aplicar estos conocimientos en diversos entornos, generando un impacto positivo en el crecimiento de las ventas.</p>
 
